@@ -11,12 +11,15 @@ News
 
 0.99.0:
 * Fixed playbacks of DVDs and other media in the movie menu
+* Speed up playlist loading
 * Worked around a bug in egg-recent that would add a '/' to local filenames
 * Read links in .desktop files to be able to use the drag'n'drop of the video
   as a bookmark system
 * devfs support and misc. parsing fixes for the CD selection widget
 * moved fullscreen code out of the video widget and into totem (enables
   fullscreen to work on the gstreamer backend)
+* Automatic GNOME-based Proxy configuration
+* Make the visual quality option menu actually work
 * Fixes concerning the colliding error and buffering dialogs
 * added a --disable-lirc argument to configure
 
